# HR-Agent-DataGraph

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_request.md  taxonomy_proposal.md
.github/workflows/: ci.yml  publish.yml
data/: README.md
data/ai-agent/: README.md  document-parsing-spec.json  skill-graph.json
data/core-hr/: contract-end-date-rules.json  glossary.json
data/core-hr/compensation/: README.md  components.json  statutory-components.json
data/core-hr/employee-status/: README.md  employment-types.json  status-mapping.json  transfer-reasons.json
data/foundation/administrative-divisions/: README.md  cities.json  provinces.json
data/foundation/higher-education/: README.md  degree-types.json  institutions.json
data/offboarding/: README.md  severance-rules.json  taxonomy.json
docs/: README.md  architecture.md  contributing.md  getting-started.md
docs/domain-guides/: ai-agent.md  offboarding.md
schemas/: README.md  administrative-division.schema.json  compensation.schema.json  contract-end-date-rules.schema.json  employee-status.schema.json  hr-glossary.schema.json  offboarding-taxonomy.schema.json  skill-graph.schema.json
schemas/_meta/: common.schema.json
sdk/python/: pyproject.toml
sdk/python/src/hr_agent_datagraph/: __init__.py  _version.py  loader.py  query.py  types.py  validation.py
sdk/python/tests/: conftest.py  test_loader.py  test_query.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts  loader.ts  query.ts  types.ts  validation.ts
sdk/typescript/tests/: loader.test.ts  query.test.ts
