[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-agent-datagraph"
version = "0.1.0"
description = "Chinese HRIS Standard Reference Dictionary & Metadata Engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "HR-Agent-DataGraph Contributors" },
]
keywords = [
    "hris",
    "ehr",
    "human-resources",
    "china",
    "metadata",
    "taxonomy",
    "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "jsonschema>=4.20",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/hr-agent/datagraph"
Documentation = "https://github.com/hr-agent/datagraph/tree/main/docs"
Repository = "https://github.com/hr-agent/datagraph"
Issues = "https://github.com/hr-agent/datagraph/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hr_agent_datagraph = ["../../data/**/*.json", "../../data/**/*.yaml", "../../data/**/*.yml"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
